Bug 394688. nsIAccessibleText::SetCaretOffset of by characters, affected by source whitespace. r=davidb, a=dsicore